--- a/index.html
+++ b/index.html
@@ -9,19 +9,29 @@
 </head>
 <body>
     <nav>
-        <h1><a href="" class="logo"><span>Taste</span>.it</a></h1>
-        <ul class="nav-links container">
-            <li class="nav-item active"><a href="">HOME</a></li>
-            <li class="nav-item"><a href="">ABOUT</a></li>
-            <li class="nav-item"><a href="">MENU</a></li>
-            <li class="nav-item"><a href="">RESERVATION</a></li>
-            <li class="nav-item"><a href="">CONTACT</a></li>
-        </ul>
-        <div class="burger">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class='navbar'>
+            <h1><a href="" class="logo"><span>Taste</span>.it</a></h1>
+            <ul class="container nav-links">
+                <li class="nav-item active"><a href="">HOME</a></li>
+                <li class="nav-item"><a href="">ABOUT</a></li>
+                <li class="nav-item"><a href="">MENU</a></li>
+                <li class="nav-item"><a href="">RESERVATION</a></li>
+                <li class="nav-item"><a href="">CONTACT</a></li>
+            </ul>
+            <div class="burger" id="burger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
+            <ul class="links-toggle" id="nav-links">
+                <li class="nav-item active"><a href="">HOME</a></li>
+                <li class="nav-item"><a href="">ABOUT</a></li>
+                <li class="nav-item"><a href="">MENU</a></li>
+                <li class="nav-item"><a href="">RESERVATION</a></li>
+                <li class="nav-item"><a href="">CONTACT</a></li>
+            </ul>
+       
     </nav>
     <main>
         <div class="container main-content">
@@ -30,5 +40,8 @@
             <a href="#" class="explore-btn">EXPLORE NOW</a>
         </div>
     </main>
+
+
+    <script src="dist/script.js"></script>
 </body>
 </html>
