final save main page

--- a/index.html
+++ b/index.html
@@ -393,23 +393,102 @@
         </section>
     </article>
     <article class="testimonials page-pd">
-        <div class="sec-t">
-            <span class="sub-heading">Testimony</span>
-            <h1 class='front-heading'>Happy Customers</h1>
-        </div>
-        <section class="t-persons">
-            <div>
-                <p class="t-coment">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts</p>
-                <div class="t-img">
-                    <img src="dist/images/Ellipse 21.jpg" alt="">
-                    <span><p>"</p></span>
+        <section class="container">
+            <div class="sec-t">
+                <span class="sub-heading">Testimony</span>
+                <h1 class='front-heading'>Happy Customers</h1>
+            </div>
+            <div class="t-persons">
+                <div class="t-test">
+                    <p class="t-coment">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts</p>
+                    <div class="t-img">
+                        <img src="dist/images/Ellipse 21.jpg" id="t-imgs"  alt="">
+                        <span><p>"</p></span>
+                    </div>
+                    <h3 class="t-name">Ruby</h3>
+                    <div class="p-list">
+                        <button class="p-circle active"><span></span></button>
+                        <button class="p-circle"><span></span></button>
+                        <button class="p-circle"><span></span></button>
+                        <button class="p-circle"><span></span></button>
+                    </div>
+                    <div class="t-arrow">
+                        <i class="arrow left" id='r-left'></i>
+                        <i class="arrow right" id='r-right'></i>                     
+                    </div>
                 </div>
-                <h3 class="t-name">name</h3>
+            </div>
+        </section>
+    </article>
+    <article class="reservation">
+        <section class="container main-r">
+            <div class="sec-r">
+                <h1 class="r-title">We Make Delicious & Nutritious Food</h1>
+                <a href="" class="explore-btn">BOOK A TABLE NOW</a>
             </div>
         </section>
 
     </article>
-
+    <footer class="contact-p">
+        <section class="container">
+            <div class="row">
+                <div class='a-row'>
+                    <h3>About</h2>
+                    <p>
+                        Far far away, behind the word mountains, 
+                        far from the countries Vokalia and Consonantia, there live the blind texts.
+                    </p>
+                    <h3>Connect</h3>
+                    <ul class="row-ul">
+                        <a href="" class="l-svg"><svg class="p-svg" fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><path d="M 16.5 5 C 10.16639 5 5 10.16639 5 16.5 L 5 31.5 C 5 37.832757 10.166209 43 16.5 43 L 31.5 43 C 37.832938 43 43 37.832938 43 31.5 L 43 16.5 C 43 10.166209 37.832757 5 31.5 5 L 16.5 5 z M 16.5 8 L 31.5 8 C 36.211243 8 40 11.787791 40 16.5 L 40 31.5 C 40 36.211062 36.211062 40 31.5 40 L 16.5 40 C 11.787791 40 8 36.211243 8 31.5 L 8 16.5 C 8 11.78761 11.78761 8 16.5 8 z M 34 12 C 32.895 12 32 12.895 32 14 C 32 15.105 32.895 16 34 16 C 35.105 16 36 15.105 36 14 C 36 12.895 35.105 12 34 12 z M 24 14 C 18.495178 14 14 18.495178 14 24 C 14 29.504822 18.495178 34 24 34 C 29.504822 34 34 29.504822 34 24 C 34 18.495178 29.504822 14 24 14 z M 24 17 C 27.883178 17 31 20.116822 31 24 C 31 27.883178 27.883178 31 24 31 C 20.116822 31 17 27.883178 17 24 C 17 20.116822 20.116822 17 24 17 z"/></svg></a>
+                        <a href="" class="l-svg"><svg class="p-svg" fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px">    <path d="M16.403,9H14V7c0-1.032,0.084-1.682,1.563-1.682h0.868c0.552,0,1-0.448,1-1V3.064c0-0.523-0.401-0.97-0.923-1.005 C15.904,2.018,15.299,1.999,14.693,2C11.98,2,10,3.657,10,6.699V9H8c-0.552,0-1,0.448-1,1v2c0,0.552,0.448,1,1,1l2-0.001V21 c0,0.552,0.448,1,1,1h2c0.552,0,1-0.448,1-1v-8.003l2.174-0.001c0.508,0,0.935-0.381,0.993-0.886l0.229-1.996 C17.465,9.521,17.001,9,16.403,9z"/></svg></a>
+                        <a href="" class="l-svg"><svg class="p-svg" fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 30 30" width="30px" height="30px">    <path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/></svg></a>
+                    </ul>
+                </div>
+                <div class='o-row'> 
+                    <h3>Open Hours</h3>
+                    <ul class="row-ul">
+                        <li>
+                            <span>Monday</span>
+                            <span class="span2">9:00 - 24:00</span>
+                        </li>
+                        <li>
+                            <span>Tuesday</span>
+                            <span class="span2">9:00 - 24:00</span>
+                        </li>
+                        <li>
+                            <span>Wednesday</span>
+                            <span class="span2">9:00 - 24:00</span>
+                        </li>
+                        <li>
+                            <span>Thursday</span>
+                            <span class="span2">9:00 - 24:00</span>
+                        </li>
+                        <li>
+                            <span>Friday</span>
+                            <span class="span2">9:00 - 24:00</span>
+                        </li>
+                        <li>
+                            <span>Saturday</span>
+                            <span class="span2">9:00 - 24:00</span>
+                        </li>
+                        <li>
+                            <span>Sunday</span>
+                            <span class="span2">9:00 - 02:00</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="c-row">
+                    <h3>Contact</h3>
+                    <ul class="row-ul">
+                        <a href="">+1(123)-226-7810</a>
+                        <a href="">+1(123)-479-7490</a>
+                        <a href="">mydomain@info.com</a>
+                    <ul class="row-ul">
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <script src="dist/script.js"></script>
 </body>
