--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/style.css">
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="preload" as="image" href="dist/images/mainBg.jpg">
+    <link rel="stylesheet" href="dist/style.css" media="all">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" media="all">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <div class='navbar'>
+        <div class='navbar '>
             <h1><a href="" class="logo"><span>Taste</span>.it</a></h1>
             <ul class="container nav-links">
-                <li class="nav-item active"><a href="">HOME</a></li>
-                <li class="nav-item"><a href="">ABOUT</a></li>
+                <li class="nav-item active"><a href="index.html">HOME</a></li>
+                <li class="nav-item"><a href="about.html">ABOUT</a></li>
                 <li class="nav-item"><a href="">MENU</a></li>
                 <li class="nav-item"><a href="">RESERVATION</a></li>
             </ul>
@@ -40,24 +42,24 @@
        
     </nav>
     <main>
-        <div class="container main-content">
-            <h1 class="animate__animated animate__fadeInDown main-title">Treat Yourself</h1>
-            <p class="animate__animated animate__fadeInDown">You don't need a silver fork to eat <span>good food</span></p>
-            <a href="#" class="animate__animated animate__fadeInDown explore-btn">EXPLORE NOW</a>
+        <div data-aos="fade-up" class="container main-content">
+            <h1 class="main-title">Treat Yourself</h1>
+            <p class="">You don't need a silver fork to eat <span>good food</span></p>
+            <a href="#" class="explore-btn">EXPLORE NOW</a>
         </div>
     </main>
     <article class="page-menu page-pd">
         <section class="container">
-            <section class="sec-t">
+            <section data-aos="fade-up"  class="sec-t">
                 <span class="sub-heading">Specialties</span>
                 <h1 class='front-heading'>Our Menu</h1>
             </section>
             <section class="sec-c">
                 <div class='heading-menu'>
-                    <div class='center'>
+                    <div data-aos="fade-up" class='center'>
                         <h3>BREAKFAST</h3>
                     </div>
-                    <div class="meals">
+                    <div data-aos="fade-up" class="meals">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -73,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals center-meal">
+                    <div data-aos="fade-up" class="meals center-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -89,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals last-meal">
+                    <div data-aos="fade-up" class="meals last-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -110,10 +112,10 @@
                     </div>
                 </div>
                 <div class='heading-menu'>
-                    <div class='center'>
+                    <div data-aos="fade-up" class='center'>
                         <h3>LUNCH</h3>
                     </div>
-                    <div class="meals">
+                    <div data-aos="fade-up" class="meals">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -129,7 +131,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals center-meal">
+                    <div data-aos="fade-up" class="meals center-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -145,7 +147,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals last-meal">
+                    <div data-aos="fade-up" class="meals last-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -166,10 +168,10 @@
                     </div>
                 </div>
                 <div class='heading-menu'>
-                    <div class='center'>
+                    <div data-aos="fade-up" class='center'>
                         <h3>DINNER</h3>
                     </div>
-                    <div class="meals">
+                    <div data-aos="fade-up" class="meals">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -185,7 +187,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals center-meal">
+                    <div data-aos="fade-up" class="meals center-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -201,7 +203,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals last-meal">
+                    <div data-aos="fade-up" class="meals last-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -222,10 +224,10 @@
                     </div>
                 </div>
                 <div class='heading-menu'>
-                    <div class='center'>
+                    <div data-aos="fade-up" class='center'>
                         <h3>DESSERTS</h3>
                     </div>
-                    <div class="meals">
+                    <div data-aos="fade-up" class="meals">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -241,7 +243,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals center-meal">
+                    <div data-aos="fade-up" class="meals center-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -257,7 +259,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals last-meal">
+                    <div data-aos="fade-up" class="meals last-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -278,10 +280,10 @@
                     </div>
                 </div>
                 <div class='heading-menu'>
-                    <div class='center'>
+                    <div data-aos="fade-up" class='center'>
                         <h3>WINE CARD </h3>
                     </div>
-                    <div class="meals">
+                    <div data-aos="fade-up" class="meals">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -297,7 +299,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals center-meal">
+                    <div data-aos="fade-up" class="meals center-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -313,7 +315,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals last-meal">
+                    <div data-aos="fade-up" class="meals last-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -334,10 +336,10 @@
                     </div>
                 </div>
                 <div class='heading-menu'>
-                    <div class='center'>
+                    <div data-aos="fade-up" class='center'>
                         <h3>DRINKS & TEA</h3>
                     </div>
-                    <div class="meals">
+                    <div data-aos="fade-up" class="meals">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -353,7 +355,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals center-meal">
+                    <div data-aos="fade-up" class="meals center-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -369,7 +371,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="meals last-meal">
+                    <div data-aos="fade-up" class="meals last-meal">
                         <div class="meals-img"><img src="dist/images/food-1.webp" alt=""></div>
                         <div class="meals-txt">
                             <div class="meals-flex">
@@ -394,15 +396,15 @@
     </article>
     <article class="testimonials page-pd">
         <section class="container">
-            <div class="sec-t">
+            <div data-aos="fade-up" class="sec-t">
                 <span class="sub-heading">Testimony</span>
                 <h1 class='front-heading'>Happy Customers</h1>
             </div>
-            <div class="t-persons">
+            <div data-aos="fade-up" class="t-persons">
                 <div class="t-test">
                     <p class="t-coment">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts</p>
                     <div class="t-img">
-                        <img src="dist/images/Ellipse 21.jpg" id="t-imgs"  alt="">
+                        <img src="dist/images/pers1.webp" id="t-imgs"  alt="">
                         <span><p>"</p></span>
                     </div>
                     <h3 class="t-name">Ruby</h3>
@@ -490,6 +492,34 @@
         </section>
     </footer>
 
-    <script src="dist/script.js"></script>
+    <script src="dist/script.js" defer></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js" ></script>
+    <script>
+        AOS.init();
+
+        // You can also pass an optional settings object
+        // below listed default settings
+        AOS.init({
+            // Global settings:
+            disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+            startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
+            initClassName: 'aos-init', // class applied after initialization
+            animatedClassName: 'aos-animate', // class applied on animation
+            useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+            disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+            debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+            throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
+            
+
+            // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+            offset: 120, // offset (in px) from the original trigger point
+            delay: 10, // values from 0 to 3000, with step 50ms
+            duration: 400, // values from 0 to 3000, with step 50ms
+            easing: 'ease', // default easing for AOS animations
+            once: false, // whether animation should happen only once - while scrolling down
+            mirror: false, // whether elements should animate out while scrolling past them
+            anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+        });
+    </script>
 </body>
 </html>
