--- a/about.html
+++ b/about.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About - Taste.it</title>
     <link rel="stylesheet" href="dist/style.css" media="all">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" media="all">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
+    <link href = "dist/images/logo.webp" rel="icon" type="image/gif">
 
 </head>
 <body>
     <nav>
         <div class='navbar '>
-            <h1><a href="" class="logo"><span>Taste</span>.it</a></h1>
+            <h1><a href="#" class="logo"><span>Taste</span>.it</a></h1>
             <ul class="container nav-links">
                 <li class="nav-item"><a href="index.html">HOME</a></li>
                 <li class="nav-item active"><a href="about.html">ABOUT</a></li>
                 <li class="nav-item"><a href="menu.html">MENU</a></li>
                 <li class="nav-item"><a href="resevation.html">RESERVATION</a></li>
             </ul>
-            <a href="#" class="contact">
+            <a href="contact.html" class="contact">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
                 <path id="Icon_awesome-phone-alt" data-name="Icon awesome-phone-alt" d="M34.973,25.439,27.1,22.064a1.687,1.687,0,0,0-1.969.485L21.641,26.81A26.062,26.062,0,0,1,9.183,14.351l4.261-3.488A1.683,1.683,0,0,0,13.929,8.9L10.554,1.02A1.7,1.7,0,0,0,8.62.043L1.308,1.73A1.688,1.688,0,0,0,0,3.375,32.621,32.621,0,0,0,32.625,36a1.687,1.687,0,0,0,1.645-1.308l1.687-7.313a1.708,1.708,0,0,0-.985-1.941Z" transform="translate(0 0)" fill="#fff"/>
               </svg>
@@ -34,11 +35,11 @@
             </div>
         </div>
         <ul class="links-toggle" id="nav-links">
-            <li class="nav-item active"><a href="">HOME</a></li>
-            <li class="nav-item"><a href="">ABOUT</a></li>
-            <li class="nav-item"><a href="">MENU</a></li>
-            <li class="nav-item"><a href="">RESERVATION</a></li>
-            <li class="nav-item"><a href="">CONTACT</a></li>
+            <li class="nav-item"><a href="index.html">HOME</a></li>
+            <li class="nav-item active"><a href="about.html">ABOUT</a></li>
+            <li class="nav-item"><a href="menu.html">MENU</a></li>
+            <li class="nav-item"><a href="resevation.html">RESERVATION</a></li>
+            <li class="nav-item"><a href="contact.html">CONTACT</a></li>
         </ul>
        
     </nav>
