--- a/resevation.html
+++ b/resevation.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reservation - Taste.it</title>
     <link rel="stylesheet" href="dist/style.css" media="all">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" media="all">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
+    <link href = "dist/images/logo.webp" rel="icon" type="image/gif">
 </head>
 <body>
     <nav>
-        <div class='navbar '>
-            <h1><a href="" class="logo"><span>Taste</span>.it</a></h1>
+        <div class='navbar'>
+            <h1><a href="#" class="logo"><span>Taste</span>.it</a></h1>
             <ul class="container nav-links">
                 <li class="nav-item"><a href="index.html">HOME</a></li>
                 <li class="nav-item"><a href="about.html">ABOUT</a></li>
                 <li class="nav-item"><a href="menu.html">MENU</a></li>
                 <li class="nav-item active"><a href="resevation.html">RESERVATION</a></li>
             </ul>
-            <a href="#" class="contact">
+            <a href="contact.html" class="contact">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
                 <path id="Icon_awesome-phone-alt" data-name="Icon awesome-phone-alt" d="M34.973,25.439,27.1,22.064a1.687,1.687,0,0,0-1.969.485L21.641,26.81A26.062,26.062,0,0,1,9.183,14.351l4.261-3.488A1.683,1.683,0,0,0,13.929,8.9L10.554,1.02A1.7,1.7,0,0,0,8.62.043L1.308,1.73A1.688,1.688,0,0,0,0,3.375,32.621,32.621,0,0,0,32.625,36a1.687,1.687,0,0,0,1.645-1.308l1.687-7.313a1.708,1.708,0,0,0-.985-1.941Z" transform="translate(0 0)" fill="#fff"/>
               </svg>
@@ -33,11 +34,11 @@
             </div>
         </div>
         <ul class="links-toggle" id="nav-links">
-            <li class="nav-item"><a href="">HOME</a></li>
-            <li class="nav-item"><a href="">ABOUT</a></li>
-            <li class="nav-item active"><a href="">MENU</a></li>
-            <li class="nav-item"><a href="">RESERVATION</a></li>
-            <li class="nav-item"><a href="">CONTACT</a></li>
+            <li class="nav-item"><a href="index.html">HOME</a></li>
+            <li class="nav-item"><a href="about.html">ABOUT</a></li>
+            <li class="nav-item"><a href="menu.html">MENU</a></li>
+            <li class="nav-item active"><a href="resevation.html">RESERVATION</a></li>
+            <li class="nav-item"><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
 
@@ -52,14 +53,23 @@
     <article id="t-form" class="t-form page-pd">
         <section class="container">
             <form action="">
-                <div class="title"><h1>BOOK YOUR TABLE</h1></div>
-                <div class="placeholders">
+                <div data-aos="fade-up" class="title"><h1>BOOK YOUR TABLE</h1></div>
+                <div data-aos="fade-up" class="placeholders">
                     <div><input class="form-control" id="name" type="name" placeholder="Name"></div>
                     <div><input class="form-control" id="email" type="email" placeholder="Email"></div>
                     <div><input class="form-control" id="phone" type="text" placeholder="Phone"></div>
-                    <div><input class="form-control" id="check-in" type="text" placeholder="Check-In"></div>
-                    <div><input class="form-control" id="time" type="text" placeholder="Time" autocomplete="off"></div>
-                    <div><input class="form-control" id="guest" type="text" placeholder="Guest"></div>
+                    <div><input class="form-control" id="check-in" type="date" placeholder="Check-In"></div>
+                    <div><input class="form-control" id="time" type="time" placeholder="Time" min="09:00" max="23:30" required></div>
+                    <div>
+                        <select name="options" id="options">
+                            <option value>Guests</option>
+                            <option value>1</option>
+                            <option value>2</option>
+                            <option value>3</option>
+                            <option value>4</option>
+                            <option value>5</option>
+                        </select>
+                    </div>
                     <div><input class="form-control f-btn" id="book-t" type="submit" value="Book Your Table Now"></div>
                 </div>
             </form>
